# villarceau

./: .gitignore  README.md  stack.yaml  villarceau.cabal
src/: CliffordCircles.hs  CliffordCircles2.hs  HopfCylinder1.hs  HopfCylinder2.hs  HopfFibration.hs  HopfTorus1.hs  HopfTorus2.hs  HopfTorus3.hs  HopfTorus4.hs  Lib.hs  Lib2.hs  LinkedHopfTori.hs  LinkedHopfTori2.hs
src-exe/: ExeCliffordCircles.hs  ExeCliffordCircles2.hs  ExeHopfTorus1.hs  ExeHopfTorus2.hs  ExeHopfTorus3.hs  ExeHopfTorus4.hs  ExeLinkedHopfTori.hs  ExeLinkedHopfTori2.hs
src/Utils/: Clifford.hs  Colour.hs  Hopf.hs  Rotation4D.hs  TestTransformationMatrix.hs  TestTransformationMatrix2.hs  TransformationMatrix.hs
