name:                villarceau
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/villarceau#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , linear
  default-language:    Haskell2010
  ghc-options     :    -Wall

source-repository head
  type:     git
  location: https://github.com/stla/villarceau
