name:                villarceau
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/villarceau#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils.TransformationMatrix
                     , Utils.TestTransformationMatrix
                     , Utils.TestTransformationMatrix2
                     , Utils.Hopf
                     , HopfTorus1
                     , HopfCylinder1
                     , HopfCylinder2
                     , HopfTorus2
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , linear
                     , extra
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stla/villarceau
