name:                villarceau
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/villarceau#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Utils.TransformationMatrix
                     , Utils.TestTransformationMatrix
                     , Utils.TestTransformationMatrix2
                     , Utils.Hopf
                     , HopfTorus1
                     , HopfCylinder1
                     , HopfCylinder2
                     , HopfTorus2
                     , HopfTorus3
                     , HopfTorus4
                     , Utils.Clifford
                     , CliffordCircles
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , linear
                     , extra
                     , gl-capture
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hopftorus1
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHopfTorus1.hs
  ghc-options:         -fllvm -main-is ExeHopfTorus1
  build-depends:       base >= 4.7 && < 5
                     , villarceau
  default-language:    Haskell2010

executable hopftorus2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHopfTorus2.hs
  ghc-options:         -fllvm -main-is ExeHopfTorus2
  build-depends:       base >= 4.7 && < 5
                     , villarceau
  default-language:    Haskell2010

executable hopftorus3
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHopfTorus3.hs
  ghc-options:         -fllvm -main-is ExeHopfTorus3
  build-depends:       base >= 4.7 && < 5
                     , villarceau
  default-language:    Haskell2010

executable hopftorus4
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHopfTorus4.hs
  ghc-options:         -fllvm -main-is ExeHopfTorus4
  build-depends:       base >= 4.7 && < 5
                     , villarceau
  default-language:    Haskell2010

executable cliffordcircles
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCliffordCircles.hs
  ghc-options:         -fllvm -main-is ExeCliffordCircles
  build-depends:       base >= 4.7 && < 5
                     , villarceau
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/villarceau
